CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT(Viewer)
FIND_PATH(GLEW_PATH REQUIRED)
FIND_PATH(GLFW_PATH REQUIRED)
find_library(GLEW_LIB REQUIRED)
find_library(GLFW_LIB REQUIRED)

INCLUDE_DIRECTORIES(${GLEW_PATH} ${GLFW_PATH})

FILE(GLOB OPENVDB_VIEWER_SOURCE_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
SET(OPENVDB_VIEWER_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.h)
ADD_DEFINITIONS(-DOPENVDB_STATICLIB)
REMOVE_DEFINITIONS(-DOPENVDB_PRIVATE)
REMOVE_DEFINITIONS(-DOPENVDB_OPENEXR_STATICLIB)
ADD_DEFINITIONS(-DGLEW_STATIC)
ADD_EXECUTABLE(vdb_viewer ${OPENVDB_VIEWER_SOURCE_FILES})
TARGET_LINK_LIBRARIES(vdb_viewer vdb debug opengl32.lib glu32.lib Half ${GLEW_LIB} ${GLFW_LIB})
TARGET_LINK_LIBRARIES(vdb_viewer vdb optimized opengl32.lib glu32.lib Half ${GLEW_LIB} ${GLFW_LIB})